# pypsa-eur

./: .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .sync-send  .syncignore-receive  .syncignore-send  .travis.yml  .yamllint  .yamllint.yml  CITATION.cff  CLMS_apikey.json  CODEOWNERS  DSR_Impact_Analysis.ipynb  DSR_V3_README.md  Dockerfile  Dockerfile.bechmark  Dockerfile.solved  Dunkel_test.yaml  IMPACT_ASSESSMENT_HEAT_DSM.md  LICENSE.txt  Makefile  Method_smarten.md  PERFECT_FORESIGHT_IMPLEMENTATION.md  PyPSA_Eurelectric_plot_helper.ipynb  README.md  REUSE.toml  STREAMLINE_WORKFLOW_IMPLEMENTATION_PLAN.md  Snakefile  Untitled.ipynb  V3_VERIFICATION.md  bundle.tar.xz  condaenv.t9u9a9pe.requirements.txt  config-de.yaml  config.co2seq.yaml  config.cost.yaml  (+38 more)
.devcontainer/: Dockerfile  devcontainer.json  environment.yml  setup.sh  welcome-message.txt
.github/: dependabot.yml  pull_request_template.md  pypsa-bot.yml
.pixi/: .gitignore  config.toml
.reuse/: dep5
LICENSES/: MIT.txt
config/: Dunkel_test.yaml  GSA.default.yaml  config.0.4.yaml  config.20240826-z1.yaml  config.default.new.yaml  config.default.overnight.yaml  config.default.yaml  config.entsoe-all.yaml  config.entsoegridkit.yaml  config.flex_lowflex.yaml  config.new-balance-maps.yaml  config.new.yaml  config.osm-raw.yaml  config.osm-release.yaml  config.perennials.yaml  config.perfect.yaml  config.personal.yaml  config.plotting.yaml  config.pr1719.yaml  config.pr1956.yaml  config.schema.yaml  config.streamlined-example.yaml  config.temporal_no_dsr.yaml  config.transport.yaml  config.transport_zecm.yaml  config.tutorial.yaml  config.tyndp.yaml  config.ua.yaml  config.validation.yaml  config.yaml  config_ES.yaml  config_backuo.yaml  config_backup.yaml  config_scenarios.yaml  config_transport.yaml  create_scenarios.py  create_zenodo_deposition_cli.py  deprecations.yaml  get_GSA_results.py  industry_config.yaml  (+23 more)
data/: 1-s2.0-S0196890424010586-mmc2.xlsx  Country_codes.csv  EIA_hydro_generation_2000_2014.csv  GDP_PPP_30arcsec_v3_mapped_default.csv  SFI-Global-Cement-Database-July-2021.xlsx  agg_p_nom_minmax.csv  ammonia_plants.csv  attributed_ports.json  biomass_transport_costs_supplychain1.csv  biomass_transport_costs_supplychain2.csv  cement-plants-noneu.csv  cement_production_extra_eu27.xlsx  ch_cantons.csv  ch_industrial_production_per_subsector.csv  co2_budget.csv  costs.csv  custom_costs.csv  custom_extra_functionality.py  custom_powerplants.csv  dh_area_assumptions.csv  distribution_losses.csv  district_heat_share.csv  egs_costs.json  eia_hydro_annual_capacity.csv  eia_hydro_annual_generation.csv  ente202300981-sup-0001-suppdata-s1.xlsx  era5-annual-HDD-per-country.csv  era5-annual-runoff-per-country.csv  gr-e-11.03.02.01.01-cc.csv  heat_load_profile.csv  heat_load_profile_BDEW.csv  heat_load_profile_DK_AdamJensen.csv  hydro_capacities.csv  hydrogen_salt_cavern_potentials.csv  import-costs.csv  import-sites.csv  links_p_nom.csv  links_tyndp.csv  nuclear_p_max_pu.csv  parameter_corrections.yaml  (+6 more)
doc/: GCP-set-up-for-windows.rst  Makefile  basemap.rst  cloudcomputing.rst  conf.py  configuration.md  configuration.rst  contributing.md  contributing.rst  costs.md  costs.rst  data-base-network.md  data-base-network.rst  data-bundle.rst  data-cutouts.md  data-cutouts.rst  data-repos.md  data-repos.rst  data-retrieval.rst  data.csv  data_inventory.csv  data_sources.md  data_sources.rst  faq_troubleshooting.rst  foresight.md  foresight.rst  hooks.py  index.md  index.rst  installation.md  installation.rst  introduction.md  introduction.rst  licenses.md  licenses.rst  limitations.md  limitations.rst  macros.py  make.bat  migration.md  (+40 more)
docs/: conf.py  configuration.rst  index.rst  introduction.rst
envs/: default_linux-64.pin.txt  default_osx-64.pin.txt  default_osx-arm64.pin.txt  default_win-64.pin.txt  environment.20240826-z1.yaml  environment.docs.yaml  environment.fixed.yaml  environment.yaml  linux-64.lock.yaml  linux-aarch64.lock.yaml  linux-pinned.yaml  macos-pinned.yaml  osx-64.lock.yaml  osx-arm64.lock.yaml  requirements.in  retrieve.yaml  ubuntu-pinned.yaml  win-64.lock.yaml  windows-pinned.yaml
extracode/: solve.py
notebooks/: ammonia_excel.py  cement_diagnostics.py  check_elec_demand.py  costs_comparison.py  data_to_excel.py  elec_prices_map.py  entsoe_data.ipynb  maps_update_18nov.py  pypsa_data.ipynb  pypsa_data.ipynb.license  steel_diagnostics.py  steel_excel.py  steel_map.py  steel_map_tech.py
notebooks_december/: ammonia_excel_piecharts.py  costs_2d_colors.py  costs_excel.py  data_to_excel_24h.py  methanol_excel_piecharts.py  steel_excel.py  steel_excel_2050.py  steel_excel_bars.py  steel_excel_piecharts.py  steel_piecharts.py  total_costs_pathways.py
notebooks_february/: base_vs_pol.py  capacities_s_39.csv  check_reg_or_eu_demand.py  climate_policy_graphs.py  eu_industry_prod_scenarios.csv  production_cement.py  production_pathways.py  read_industry_prices.py  read_industry_results.py  read_industry_resultsregional.py  read_results.ipynb  read_results_spyder.py  steel_map_tech.py
plugins/snakemake-logger-plugin-pypsa/: README.md  pyproject.toml
plugins/snakemake-logger-plugin-pypsa/src/snakemake_logger_plugin_pypsa/: __init__.py
plugins/snakemake-storage-plugin-http/: CHANGELOG.md  LICENSE  README.md  pyproject.toml
plugins/snakemake-storage-plugin-http/snakemake_storage_plugin_http/: __init__.py
plugins/snakemake-storage-plugin-zenodo/: LICENSE  README.md  pyproject.toml
plugins/snakemake-storage-plugin-zenodo/snakemake_storage_plugin_zenodo/: __init__.py
pypsa_eur_cli/: pyproject.toml
pypsa_eur_cli/pypsa_eur/: cli_helpers.py  main.py  progress_tracker.py
pypsa_eur_cli/pypsa_eur_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
redispatch_files_miri/: redispatch_example_old.py  test_network.py
report/: references.bib  report.tex
rules/: build_electricity.smk  build_sector.smk  collect.smk  common.smk  compose.smk  development.smk  plot.smk  (+10 more)
(+692 files in other folders)
