# SPDX-FileCopyrightText: Contributors to PyPSA-Eur <https://github.com/pypsa/pypsa-eur>
#
# SPDX-License-Identifier: MIT

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snakemake-logger-plugin-descriptive"
version = "0.1.0"
description = "A descriptive logger plugin for Snakemake"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "snakemake-interface-logger-plugins>=1.2.0",
]

[project.entry-points."snakemake.plugins.logger"]
descriptive = "snakemake_logger_plugin_descriptive:LogHandler"
