[tool.poetry]
name = "snakemake-storage-plugin-http"
version = "0.3.0"
description = "Snakemake storage plugin for downloading input files from HTTP(s)."
authors = [
    "Christopher Tomkins-Tinch <tomkinsc@broadinstitute.org>",
    "Johannes Koester <johannes.koester@uni-due.de>",
]
readme = "README.md"
repository = "https://github.com/snakemake/snakemake-storage-plugin-http"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/storage/http.html"
license = "MIT"
keywords = ["snakemake", "plugin", "storage", "http", "https"]


[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
snakemake-interface-common = "^1.14.0"
snakemake-interface-storage-plugins = "^4.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
coverage = {extras = ["toml"], version = "^7.3.2"}
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"
pytest = "^7.0"
snakemake = "^9.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
