# SPDX-FileCopyrightText: Contributors to PyPSA-Eur <https://github.com/pypsa/pypsa-eur>
#
# SPDX-License-Identifier: MIT

[project]
name = "snakemake-storage-plugin-zenodo"
version = "0.1.0"
description = "Snakemake storage plugin for downloading files from Zenodo with caching and rate limiting"
authors = [
    { name = "PyPSA-Eur Authors", email = "jonas.hoersch@openenergytransition.org" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["snakemake", "plugin", "storage", "zenodo", "cache"]
requires-python = ">=3.10"
dependencies = [
    "aiohttp ~= 3.9",
    "reretry ~= 0.11",
    "snakemake-interface-common ~= 1.14",
    "snakemake-interface-storage-plugins >=4.2,<5.0",
    "snakemake-storage-plugin-http ~= 0.3",
    "tqdm-loggable>=0.2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.pyright]
typeCheckingMode = "off"

[project.urls]
homepage = "https://github.com/pypsa/pypsa-eur"
repository = "https://github.com/pypsa/pypsa-eur"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.entry-points."snakemake_storage_plugins"]
zenodo = "snakemake_storage_plugin_zenodo:StorageProvider"
